spacing fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -52,6 +52,7 @@ h3 {
   font-weight: bold;
   font-size: 13px;
   line-height: 19px;
+  margin-bottom: 0;
 }
 
 .cards {
@@ -80,9 +81,9 @@ h3 {
 .empty-card {
   box-shadow: none;
   background: #DFE3E6;
-  border:none;
+  border: none;
+  padding: 5px;
   margin: 0;
-  padding: 1px;
 }
 
 .add-card, .add-column {
